--- a/TicTacToe/TicTacToe/MainPage.xaml
+++ b/TicTacToe/TicTacToe/MainPage.xaml
@@ -8,7 +8,7 @@
         <StackLayout Orientation="Horizontal" Margin="0, 20">
             <Label>Current state:</Label>
             <Label x:Name="StateLabel">Null</Label>
-            <Button x:Name="RestartBtn" Text="Restart" HorizontalOptions="End"></Button>
+            <Button x:Name="RestartBtn" Text="Restart" HorizontalOptions="End" VerticalOptions="End"></Button>
         </StackLayout>
         <Grid x:Name="GameField" Padding="20">
             <Grid.ColumnDefinitions>
